# messenger-x

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  Messenger_X_Design_Document.md  README.md  docker-compose.yml  render.yaml  rust-toolchain.toml
.cargo/: config.toml
.claude/: launch.json
crates/mx-ai/: Cargo.toml
crates/mx-ai/src/: lib.rs
crates/mx-auth/: Cargo.toml
crates/mx-auth/src/: lib.rs
crates/mx-crypto/: Cargo.toml
crates/mx-crypto-wasm/: Cargo.toml
crates/mx-crypto-wasm/src/: lib.rs
crates/mx-crypto/src/: identity.rs  lib.rs  pqxdh.rs  ratchet.rs  session.rs
crates/mx-groups/: Cargo.toml
crates/mx-groups/src/: lib.rs
crates/mx-messaging/: Cargo.toml
crates/mx-messaging/src/: lib.rs
crates/mx-presence/: Cargo.toml
crates/mx-presence/src/: lib.rs
crates/mx-server/: Cargo.toml
crates/mx-server/src/: main.rs
crates/mx-storage/: Cargo.toml
crates/mx-storage/src/: lib.rs  memory.rs  model.rs  persist.rs  postgres.rs  redis.rs  traits.rs
crates/mx-transport/: Cargo.toml
crates/mx-transport/src/: codec.rs  lib.rs  wire_envelope.rs
crates/mx-types/: Cargo.toml
crates/mx-types/src/: crypto_material.rs  ids.rs  lib.rs  message.rs  prekey.rs
scripts/: e2e_pqxdh_full.mjs  e2e_wasm_test.mjs  livepush_test.mjs  pqxdh_session_test.mjs  ratchet_test.mjs  wasm_verify.mjs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: api.ts  app.ts  crypto.ts  device.ts  main.ts  styles.css
web/src/mxwasm/: mx_crypto_wasm.d.ts  mx_crypto_wasm.js  mx_crypto_wasm_bg.wasm  mx_crypto_wasm_bg.wasm.d.ts  package.json
