[package]
name = "mx-server"
version = "0.1.0"
edition = "2021"
description = "The runnable Messenger X backend binary: HTTP API + WebSocket gateway wiring all domain crates together."

[[bin]]
name = "mx"
path = "src/main.rs"

[dependencies]
mx-types = { path = "../mx-types" }
mx-crypto = { path = "../mx-crypto" }
mx-storage = { path = "../mx-storage" }
mx-transport = { path = "../mx-transport" }
mx-auth = { path = "../mx-auth" }
mx-messaging = { path = "../mx-messaging" }
mx-groups = { path = "../mx-groups" }
mx-presence = { path = "../mx-presence" }
mx-ai = { path = "../mx-ai" }

axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
