[package]
name = "mx-types"
version = "0.1.0"
edition = "2021"
description = "Shared domain types for Messenger X. Dependency-light contract crate that all other crates build against."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
